kubernetes/rcll-sim/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: rcll-sim-0
---
kind: Namespace
apiVersion: v1
metadata:
  name: rcll-sim-1
