kubernetes/rcll-sim/gzweb-pod.yaml
# Headless service for Referee Box
apiVersion: v1
kind: Service
metadata:
  name: gzweb
spec:
  selector:
    app: gzweb
  ports:
  - port: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: gzweb
  labels:
    app: gzweb
spec:
  hostname: gzweb
  containers:
    - name: gzweb
      image: defiant.kbsg.rwth-aachen.de:5000/timn/gzweb:7
      #imagePullPolicy: Always
      command: ["bash", "-c", "/root/gzweb/start_gzweb.sh && sleep infinity"]
  imagePullSecrets:
    - name: regsecret
  restartPolicy: Never
