kubernetes/rcll-sim/gzweb-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gzweb
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gzweb
---
apiVersion: v1
kind: Service
metadata:
  name: gzweb-ws
spec:
  type: NodePort
  ports:
  - port: 7681
    targetPort: 7681
    protocol: TCP
    name: http
  selector:
    app: gzweb
